test: harden Task 13 conformance checks